# rmqcpp

src/: CMakeLists.txt
src/rmq/: CMakeLists.txt  Config.cmake.in
src/rmq/rmqio/: CMakeLists.txt
